2001-02-06  Ramiro Estrugo  <ramiro@eazel.com>

	reviewed by: Michael Engber  <engber@eazel.com>

	* src/nautilus-sidebar.c: (nautilus_sidebar_initialize_class),
	(nautilus_sidebar_size_allocate), (nautilus_sidebar_realize):
	Tell X not to clear the window contents when the sidebar is
	resized.  Since we double buffer its contents, this will reduce
	(but not eliminate) flicker in the sidebar.
	
2001-02-06  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Laszlo Kovacs  <laszlo.kovacs@sun.com>

	Fixed bug 795 (help component installs files in nautilus prefix,
	but uses gnome-libs prefix to find them later) by expanding the
	set of places Nautilus looks for help files.

	* components/help/hyperbola-filefmt.c:
	(fmt_man_populate_tree_for_subdir): Changed to look in more places
	for help files: the help directory in the gnome prefix, the help
	directory in the nautilus prefix, and directories in GNOME_PATH.
	(fmt_help_populate_tree): New helper function.
	(append_help_dir_if_exists): New helper function.

	* components/help/Makefile.am: Define DATADIR in compile flags.

	* components/help/hyperbola-main.c: Add copyright notice.

	This part not reviewed:

	* .cvsignore, libnautilus-extensions/.cvsignore: gnore more
	things.

	* Makefile.am: distribute .in versions of xml-i18n-tools.
	
2001-02-06  John Sullivan  <sullivan@eazel.com>

	reviewed by: <delete if not using a buddy>

	Fixed bug 5157 (Nautilus won't display directories for
	which it thinks it doesn't have permissions)

	I removed the code that prevented Nautilus from even
	trying to load a location for which the perceived
	permissions didn't allow reading (because the perceived
	permissions can be wrong with some file systems). Now
	it always tries, and puts up an error dialog only if
	it gets an error while actually loading the directory.

	* src/file-manager/fm-error-reporting.h:
	* src/file-manager/fm-error-reporting.c:
	(fm_report_error_loading_directory): New function, currently